// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentProgress /> should render properly on cancelled state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Finished
  </p>
</div>
`;

exports[`<PaymentProgress /> should render properly on confirm state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={Object {}}
  >
    Finished
  </p>
</div>
`;

exports[`<PaymentProgress /> should render properly on error state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Finished
  </p>
</div>
`;

exports[`<PaymentProgress /> should render properly on form state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={Object {}}
  >
    Finished
  </p>
</div>
`;

exports[`<PaymentProgress /> should render properly on review state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={Object {}}
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={Object {}}
  >
    Finished
  </p>
</div>
`;

exports[`<PaymentProgress /> should render properly on success state 1`] = `
<div
  className="css-12glmx8"
>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Review
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Payment Details
  </p>
  <svg
    className="css-0"
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
    viewBox="0 0 448 512"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
    />
  </svg>
  <p
    className="css-18poma1"
    style={
      Object {
        "color": "#44337A",
        "fontWeight": "bold",
      }
    }
  >
    Finished
  </p>
</div>
`;
